book/k8s-perfect-guide/chapter06/sample-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: "http-port"
      protocol: "TCP"
      targetPort: 80
  selector:
    app: sample-app
