book/k8s-perfect-guide/chapter06/sample-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-external-name
  namespace: default
spec:
  type: ExternalName
  externalName: api.agify.io
