book/k8s-perfect-guide/chapter06/sample-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-lb
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: sample-app
