book/k8s-perfect-guide/chapter06/sample-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: TCP
      port: 8080 # ClusterIP 에서 수신할 포트
      targetPort: 80 # 목적지 컨테이너 포트
      nodePort: 30080 # 모든 쿠버네티스 노드에서 수신할 포트, 생략하면 자동 할당
  selector:
    app: sample-app
